--- a/3/job_board/templates/job_board/_base.html
+++ b/3/job_board/templates/job_board/_base.html
@@ -2,23 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=chrome">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Board</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
     <body>
         <div class="mb-8">
-            <h1 class="text-4*1 py-8 -pl-8">
-                <a href={% url "home" %}>
-                    Job Board
+            <h1 class="text-4xl py-8 pl-8">
+            <a href="{% url 'home' %}">
+                    🗃️ Job Board
                 </a>
             </h1>
+            <hr>
         </div>
-
         <div class="container mx-auto mb-8">
-            {% block content %}
+            {% block content%}
             {% endblock content %}
+            
         </div>
     </body>
 </html>
