--- a/3/job_board/templates/job_board/index.html
+++ b/3/job_board/templates/job_board/index.html
@@ -1,17 +1,19 @@
+{% extends 'job_board/_base.html' %}
 {% load humanize %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-    <body>
-        <ul>
-            {% for job_posting in job_postings %}
-                <li> {{job_posting.title|title}} | {{job_posting.description}} | ${{job_posting.salary|intcomma}} </li>
-            {% endfor %}
-        </ul>
-    </body>
-</html>
+{% block content %}
+    
+    <div class="flex justify-center w-10/12 mx-auto flex-wrap gap-6">
+        {% for posting in job_postings %}
+            <a class="w-1/4 text-center" href="{% url 'job-detail' posting.pk %}">
+            <div class="border rounded px-8 py-10 bg-gray-50 hover:bg-gray-100 hover:cursor-pointer">
+                <p class="text-2xl pb-2">{{posting.title}}</p>
+                <hr class="py-2">
+                <p class="font-semibold pb-2">Company: {{posting.company}}</p>
+                <p class="text-xl pb-2">Salary: ${{posting.salary|intcomma}}</p>
+                <p class="underline underline-offset-2 text-blue-500 hover:text-blue-400">View Details</p>
+            </div>
+            </a>
+        {% endfor %}
+    </div>
+{% endblock content %}
